OX游戏添加功能 以 "(1, 3)" 格式而不是 "6" 显示移动位置。（不理解） 在步骤列表中加粗显示当前选中的项目。（完成） 重写 Board(棋盘) 使用两个循环来制作方格，而不是对它们进行硬编码。（未完成） 添加一个切换按钮，您可以按升序或降序对步骤列表进行排序。（完成） 当有人赢了，突出显示导致游戏胜利的三个方块。（完成）

--- a/src/examples/tic-tac-toe.less
+++ b/src/examples/tic-tac-toe.less
@@ -30,6 +30,10 @@ ol, ul {
   padding: 0;
   text-align: center;
   width: 34px;
+
+  &.winner {
+    color: red;
+  }
 }
 
 .square:focus {
@@ -47,4 +51,10 @@ ol, ul {
 
 .game-info {
   margin-left: 20px;
+
+  li {
+    &.active {
+      font-weight: bold;
+    }
+  }
 }
